# bp-nfoview

./: .travis.yml  CMakeLists.txt  INSTALL  README  README.md  TODO  bp-nfoview.desktop  cm_config.h.in  meson.build  meson_options.txt
.github/: act.sh
.github/workflows/: main.yml
.github/workflows/scripts/: prepare-cross-env.sh
.reuse/: dep5
arch/: PKGBUILD  PKGBUILD-git  bp-nfoview.install
data/: bp-nfoview.desktop  bp-nfoview.desktop.license
debian/: changelog  control  copyright  docs
meson/: x86_64-w64-mingw32.shared.ini  x86_64-w64-mingw32.static-combined.ini  x86_64-w64-mingw32.static.ini  x86_64-w64.ini
src/: AboutDialog.cpp  AboutDialog.hpp  BPNVMainWindow.cpp  BPNVMainWindow.hpp  CMakeLists.txt  bp-nfoview.cpp  bp-nfoview.h  bp-nfoview.qrc  config.hpp.in  dialog_about.cpp  dialog_about.h  dialog_charbox.cpp  dialog_charbox.h  moc_bp-nfoview.cpp  moc_dialog_about.cpp  qcodepage437codec.cpp  qcodepage437codec.h  qrc_bp-nfoview.cpp  qt_plugins_static.cpp
